# Mini_FastQC-personal-

./: .gitignore  README.md  main.py  pyproject.toml
mini_fastqc/: pathes.py  plots.py  purification.py  qc.py  runner.py  utils.py
tests/: test_plots.py  test_purification.py
